# aussiebb-outage-watcher

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  SECURITY.MD  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: build_container.yml  mypy.yml
app/: __main__.py  test_utils.py
aussiebb_outage_watcher/: __init__.py  __main__.py
tests/: test_functional.py
