[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.3"
schedule = "^1.2.2"
pyaussiebb = "0.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
mypy = "^1.13.0"
black = "^24.10.0"
pytest = "^8.3.4"
pylint-pydantic = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "app"
version = "0.1.0"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
description = "silly container thing"

[tool.ruff]
line-length = 200
